// Vitest Snapshot v1

exports[`renders both prev and next correctly 1`] = `
<nav
  className="css-10z1pgu"
>
  <a
    className="chakra-button css-4xx2wk"
    href="https://example.com/prev"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
  >
    <span
      className="chakra-button__icon css-1wh2kri"
    >
      <svg
        aria-hidden={true}
        className="svg-inline--fa fa-arrow-left "
        data-icon="arrow-left"
        data-prefix="fas"
        focusable={false}
        role="img"
        style={{}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"
          fill="currentColor"
          style={{}}
        />
      </svg>
    </span>
    前
  </a>
  <div
    className="css-17xejub"
  />
  <a
    className="chakra-button css-4xx2wk"
    href="https://example.com/next"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
  >
    次
    <span
      className="chakra-button__icon css-1hzyiq5"
    >
      <svg
        aria-hidden={true}
        className="svg-inline--fa fa-arrow-right "
        data-icon="arrow-right"
        data-prefix="fas"
        focusable={false}
        role="img"
        style={{}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
          fill="currentColor"
          style={{}}
        />
      </svg>
    </span>
  </a>
</nav>
`;

exports[`renders only next correctly 1`] = `
<nav
  className="css-10z1pgu"
>
  <div
    className="css-17xejub"
  />
  <a
    className="chakra-button css-4xx2wk"
    href="https://example.com/next"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
  >
    次
    <span
      className="chakra-button__icon css-1hzyiq5"
    >
      <svg
        aria-hidden={true}
        className="svg-inline--fa fa-arrow-right "
        data-icon="arrow-right"
        data-prefix="fas"
        focusable={false}
        role="img"
        style={{}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
          fill="currentColor"
          style={{}}
        />
      </svg>
    </span>
  </a>
</nav>
`;

exports[`renders only prev correctly 1`] = `
<nav
  className="css-10z1pgu"
>
  <a
    className="chakra-button css-4xx2wk"
    href="https://example.com/prev"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
  >
    <span
      className="chakra-button__icon css-1wh2kri"
    >
      <svg
        aria-hidden={true}
        className="svg-inline--fa fa-arrow-left "
        data-icon="arrow-left"
        data-prefix="fas"
        focusable={false}
        role="img"
        style={{}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"
          fill="currentColor"
          style={{}}
        />
      </svg>
    </span>
    前
  </a>
  <div
    className="css-17xejub"
  />
</nav>
`;
